Fix submenus not showing

--- a/main/css/menu.css
+++ b/main/css/menu.css
@@ -20,7 +20,6 @@ nav ul {
   text-align: center;
   list-style: none;
   padding: 0;
-  overflow: hidden;
 }
 
 nav ul li {
